# news_donm_cc

./: .coveragerc  .dockerignore  .gitignore  .mypy.ini  .python-version  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  TODO.md  cov-requirements.txt  dev-requirements.txt  notes.md  pyproject.toml  requirements-dev.txt  requirements.txt  update.sh  upload.sh
.github/workflows/: build-and-deploy.yaml
aws/: create-container-service-deployment.json  create-container-service-deployment.template.json
container/: Dockerfile
container/crontabs/: news
container/nginx/: nginx.conf
container/sbin/: check-health  extract  news
container/wwwroot/: sitemap.txt
crontabs/: news
docs/: about_news.md  acoup_blog.xml  benjiweber.xml  charity_wtf.xml  cmake_tags.xml  daring_fireball-2023-11-17.xml  daring_fireball.xml  daring_fireball_ads.xml  daring_fireball_bad_entry.py  daring_fireball_kolide.xml  daring_fireball_sponsors.xml  daring_fireball_workos.xml  hacker_news.xml  hacker_news_2.xml  kobo_blog.xml  lobsters.xml  molly_white.xml  notes.md  reddit-private-front-page.xml  reddit.xml  rust_blog.xml  streetsblog-2025.xml  streetsblog-2026-04-18.xml  streetsblog.xml  streetsblog_no_title.xml  tilde_news.xml  todo.md  twostopbits.xml  youtube.html
docs/crashes/: 2023-03-27 Crash.md
nginx/: nginx.conf
nginx/default/: 404.html  500.html  502.html  503.html  504.html  index.html
nginx/error_pages/: 404.html  500.html  502.html  503.html  504.html
sbin/: check-health  extract  news  serve
scripts/: extract_urls.py  fillin.py  pip2apk.py  py3apk.py
secrets/: README.md
src/: error.rs  extractor.py  gunicorn.conf.py  health_check.py  https_client.rs  jsontype.py  lib.rs  logs.py  main.rs  news.rs  news_error.rs  options.rs  query.py  rss.rs  server.py  story.rs  youtube_user.py
src/extractor/: __init__.py  __main__.py  cached_feeds.py  cached_news.py  s3_store.py  s3_store_test.py  store.py  store_test.py
src/feeds/: __init__.py  acoup.py  aggregator.py  aggregator_test.py  charity_wtf.py  cmake_tags.py  daring_fireball.py  daring_fireball_test.py  entry.py  feed.py  feed_test.py  feeds.py  feeds_test.py  hacker_news.py  hacker_news_test.py  lobsters.py  molly_white.py  reddit.py  reddit_test.py  rust_blog.py  site.py  site_test.py  sites.py  skip_sites.py  streetsblog.py  streetsblog_test.py  tilde_news.py
src/health/: __init__.py  __main__.py  health.py  health_test.py  jobs.py  options.py  processes.py  servers.py
src/http_shim/: __init__.py  body.py  body_test.py  entity.py  headers.py  headers_test.py  message.py  message_test.py  method.py  method_test.py  request.py  request_test.py  resource.py  resource_test.py  response.py  response_test.py
src/news/: __init__.py  cache.py  cache_test.py  index.py  index_test.py  item.py  item_test.py  items.py  news.py  news_test.py  (+14 more)
test/: items.http  mypy.txt
wwwroot/: index.html  news.css  news.js  robots.txt
(+109 files in other folders)
