[package]
name = "news"
version = "0.1.0"
authors = ["Don McCaughey <don@donm.cc>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
serde-xml-rs = "0.4.1"
url = "1.7.2"
url_serde = "0.2.0"
