[project]
name = 'News'
version = '0.0.1'
requires-python = '==3.12.*'
dependencies = [
    "beautifulsoup4 == 4.13.5",
    "boto3 == 1.37.1",
    "feedparser == 6.0.12",
    "Flask == 3.0.3",
    "gunicorn == 23.0.0",
    "requests == 2.32.5",
]

[tool.uv]
dev-dependencies = [
    "boto3-stubs[s3] == 1.37.14",
    "botocore-stubs == 1.37.14",
    "mypy == 1.15.0",
    "pytest == 8.3.5",
    "pytest-cov == 6.0.0",
    "types-beautifulsoup4 == 4.12.0.20250516",
    "types-requests == 2.32.4.20250913",
]
