[project]
name = 'News'
version = '0.0.1'
requires-python = '==3.12.*'
dependencies = [
    "beautifulsoup4 == 4.13.5",
    "boto3 == 1.40.30",
    "feedparser == 6.0.12",
    "Flask == 3.1.2",
    "gunicorn == 23.0.0",
    "requests == 2.32.5",
]


[tool.coverage.run]
branch = true
include = [
    'src/extractor/*',
    'src/feeds/*',
    'src/health/*',
    'src/news/*',
    'src/utility/*',
]
omit = ['src/**/*_test.py']


[tool.uv]
dev-dependencies = [
    "boto3-stubs[s3] == 1.40.30",
    "botocore-stubs == 1.40.30",
    "mypy == 1.18.1",
    "pytest == 8.4.2",
    "pytest-cov == 7.0.0",
    "types-beautifulsoup4 == 4.12.0.20250516",
    "types-requests == 2.32.4.20250913",
]
